--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ author.
           <p class = "text-center">I am from Lawrence, Massachussets. I have spent most of my life in this city.</p>
         </div>
         <div class = "col-md-4">
-          <img src="manhattan2.jpeg" class="img-circle" alt="Pic of lawrence" width="304" height="236">
+          <img src="manhattan2.jpg" class="img-circle" alt="Pic of lawrence" width="304" height="236">
           <p class="text-center">I was Born in Manhattan, New York. I only lived there for a short period. </p>
         </div>
         <div class = "col-md-4">
